# brainfuck-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make-lint.yaml  pyci.yml
brainfuck_games/: __init__.py  cli.py  engine.py  settings.py
brainfuck_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brainfuck_games/scripts/: __init__.py  brainfuck_calc.py  brainfuck_even.py  brainfuck_games.py  brainfuck_gcd.py  brainfuck_prime.py  brainfuck_progression.py
