[tool.poetry]
name = "brainfuck-lvl1"
version = "0.1.0"
description = "Brainfuck games"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "brainfuck_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brainfuck-games = "brainfuck_games.scripts.brainfuck_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
