[tool.poetry]
name = "brainfuck-lvl1"
version = "0.5.0"
description = "Brainfuck games"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "brainfuck_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
brainfuck-games = "brainfuck_games.scripts.brainfuck_games:main"
brainfuck-even = "brainfuck_games.scripts.brainfuck_even:main"
brainfuck-calc = "brainfuck_games.scripts.brainfuck_calc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
