[tool.poetry]
name = "brainfuck-lvl1"
version = "0.7.0"
description = "Brainfuck games"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "brainfuck_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
brainfuck-games = "brainfuck_games.scripts.brainfuck_games:main"
brainfuck-even = "brainfuck_games.scripts.brainfuck_even:main"
brainfuck-calc = "brainfuck_games.scripts.brainfuck_calc:main"
brainfuck-gcd = "brainfuck_games.scripts.brainfuck_gcd:main"
brainfuck-progression = "brainfuck_games.scripts.brainfuck_progression:main"
brainfuck-prime = "brainfuck_games.scripts.brainfuck_prime:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
